# GMTU-Python

./: .gitignore  PRIVACY.md  README.md
src/: README.md  install.sh  pyproject.toml
src/gmtu/: __init__.py  cli.py  gmtu.py
tests/: test.py
