[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmtu"
version = "0.1.0"
description = "Send push notification to your phone"
authors = [{ name = "Xuan Tang", email = "you@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"

[project.scripts]
gmtu = "gmtu.cli:main"
