[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmtu"
version = "0.1.1"
description = "Send push notification to your phone, with the GMTU app"
authors = [{ name = "Xuan Tang", email = "txstc55@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"

[project.scripts]
gmtu = "gmtu.cli:main"
